--- a/main.html
+++ b/main.html
@@ -8,7 +8,34 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
+    <h1>Goa</h1>
+	<br>
+	<p>Nice place to enjoy beaches</p>
+	<p>The top 5 attractions in the destination</p>
+	
+	<ol>
+		<b>
+		<li>beach</li>
+		<li>Dance club</li>
+		<li>museum</li>
+		<li>sky dive</li>
+		<li>Mall</li>
+		</b>
+	</ol>
+	<p>Must-try foods</p>	
+	<ul>
+		<b>
+		<li>food truck</li>
+		<li>resturant</li>
+		<li>street food</li>
+		<li>sea food</li>
+		<li>lassi</li>
+		</b>
+		
+	</ul>
+	
+	
+	<script type="text/javascript" src="./script.js">
 </script>
 
 </body>
